# pi-kinect

./: .env.example  AUDIT.md  CLEANUP_SUMMARY.md  Dockerfile  README.md  REFACTORING_COMPLETE.md  copy_to_pi_new.ps1  deploy_to_pi.sh  kinect_real_capture.py  kinect_robust.py  kinect_simple_real.py  setup_pi_kinect.sh
.github/workflows/: ci.yml
kinect_ws/src/: MANUAL_FIX_INSTRUCTIONS.md  PI_LIBRARY_DIAGNOSTIC.md  PROGRESS_SUMMARY.md  README.md  README_CLEAN.md  README_CLEANED.md  ROBUST_AUTH_SETUP.md  SHORTCUT_SETUP.md  SSH_TROUBLESHOOTING.md  analyze_ssh_failure.py  apply_streaming_fix.py  camera_streamer.py  check_drivers.py  check_libraries_on_pi.sh  check_pi_files.bat  check_pi_libraries.py  check_pi_status.bat  check_pi_status.py  cleanup_and_setup_ssh.bat  complete_pi_setup.sh  connect_to_pi.bat  connect_to_pi.ps1  copy_files_alternative.py  copy_to_pi.bat  copy_to_pi.ps1  copy_to_pi_simple.bat  copy_to_pi_simple.py  create_desktop_shortcut.ps1  create_shortcut.bat  deploy_camera_to_pi.bat  deploy_streaming_fix.py  deploy_to_pi.bat  deploy_to_pi.py  detailed_diagnostic.py  diagnose_pi_camera.py  diagnose_streaming_issue.py  find_pi_ip.bat  fix_freenect_capture.py  fix_ssh_auth.bat  fix_ssh_auth.py  (+68 more)
pi_kinect/: README.md  __init__.py  constraints.txt  pyproject.toml  requirements.txt
pi_kinect/config/: default.yaml
pi_kinect/pi_kinect/: __init__.py  cli.py  config.py  exceptions.py  logging_config.py  streamer.py  viewer.py
pi_kinect/pi_kinect.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pi_kinect/scripts/: pi-kinect.service  run.sh  setup_pi.sh
pi_kinect/scripts/dev/: check.sh
pi_kinect/tests/: __init__.py  test_config.py
scripts/: v4l2_rgb_or_freenect.sh
setup/: setup_pi_deps.sh
systemd/: pi-kinect.service
windows/: view_depth.bat  view_rgb.bat
